--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "http-server -c-1 ./public",
+    "build-watch": "webpack -w",
+    "start": "npm run build-watch & npm run serve"
   },
   "author": "",
   "license": "ISC",
