--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "http-server": "^0.11.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
